--- a/index.html
+++ b/index.html
@@ -9,7 +9,7 @@
         <meta http-equiv="X-UA-Compatible" content="IE=edge" />
         <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=2" />
 
-        <link rel="icon" href="assets/img/favicon/favicon.ico" type="image/x-icon" />
+        <link rel="icon" href="assets/img/logo.png" type="image/x-icon" />
 
         <link rel="stylesheet" href="assets/css/libs.css" />
         <link rel="stylesheet" href="assets/css/style.css" />
