--- a/index.html
+++ b/index.html
@@ -477,7 +477,7 @@
                             <div class="col-xs-4 col-lg-4 col-12 item">
                                 <div class="footer-item">
                                     <p class="footer-item-heading">Contacto</p>
-                                    <ul class="footer-contacts">
+                                    <!-- <ul class="footer-contacts">
                                         <li>
                                             <i class="material-icons md-22">location_on</i>
                                             <div class="footer-contact-info">301 S Irving Blvd Los Angeles, CA 90020</div>
@@ -492,7 +492,7 @@
                                                 <a href="mailto:mail@example.com">mail@example.com</a>
                                             </div>
                                         </li>
-                                    </ul>
+                                    </ul> -->
                                 </div>
                                 <!-- <div class="footer-item">
                                     <p class="footer-item-heading">Subscribe</p>
